<resources>
    <string name="app_name">创会堂</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="login_username">请输入你的手机号</string>
    <string name="login_password">请输入你的密码</string>
    <string name="login_btn">登录</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_regist">注册账号</string>


    <string name="registe_toolbar_title">注  册</string>
    <string name="registe_rule">《创汇堂服务条款》</string>
    <string name="registe_from_school">学    校:</string>
    <string name="registe_from_nickname">昵称:</string>
    <string name="registe_from_password">密   码:</string>
    <string name="registe_from_phone">手机号:</string>







</resources>
