<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_registe_showsnackbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/id_registe_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/id_registe_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registe_toolbar_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_large" />

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/registe_from_phone"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:clickable="false"
                android:id="@+id/id_registe_username"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="昵    称:"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/id_registe_nickname"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="密    码:"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/id_registe_password"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="再一次:"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/id_regiset_confirm"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:background="@android:color/white"
                android:hint="请再一次输入密码"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

    </LinearLayout>



    <Button
        android:id="@+id/id_registe_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/btn_style"
        android:text="注 册"
        android:textColor="#ff000000"
        android:textSize="18.0sp" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/id_registe_rule"
        android:layout_height="wrap_content"
        android:text="@string/registe_rule"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/high_light_text"
        />

</LinearLayout>